# Nordwand-Mono

./: .gitignore  ATTRIBUTIONS.md  README.md  config.example.yml  makefile  pyproject.toml  visualize.py
assets/: ascii.txt
src/: config.py  generate_font.py  visualize.py  visualize_text.py
src/characters/: o.py  r.py
src/draw/: corner.py  corner_double.py  cross_curve.py  dented_rect.py  loop.py  parallelogramm.py  rect.py  s_curve.py  square_corner.py  superellipse_arch.py
src/glyphs/: __init__.py  composed.py  composed_glyphs.py
src/glyphs/accents/: acute.py  caron.py  cedilla.py  circumflex.py  grave.py  macron.py  ring.py  tilde.py
src/glyphs/base/: superellipse_ear.py
src/glyphs/extra/: ellipsis.py  em_dash.py  en_dash.py
src/glyphs/latin/: ae.py  capital_oslash.py  oe.py  oslash.py  sharp_s.py  uppercase_ae.py  uppercase_oe.py  uppercase_oslash.py
src/glyphs/letters/: a.py  b.py  c.py  d.py  e.py  f.py  g.py  j.py  m.py  n.py  o.py  s.py
src/glyphs/ligatures/: double_equals_sign.py  double_hyphen.py  double_right_arrow.py  right_arrow.py
src/glyphs/lowercase/: a.py  a_2.py  a_3.py  a_4.py  b.py  c.py  d.py  e.py  e_3.py  e_4.py  f.py  f_2.py  g.py  h.py  i.py  i_2.py  j.py  k.py  l.py  l_2.py  m.py  m_2.py  n.py  o.py  p.py  q.py  r.py  s.py  t.py  u.py  v.py  w.py  w_2.py  x.py  y.py  y_2.py  (+1 more)
src/scripts/: analyze_width.py  banner.py  samples.py  specimen_pdf.py  specimen_png.py
src/shapes/: corner.py  cross_curve.py  rounded_half_loop.py  superellipse.py  superellipse_ear.py  superellipse_loop.py
src/utils/: bounds.py  intersection.py
(+86 files in other folders)
